Fixed home page logo alignment

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -147,6 +147,10 @@
         padding-left: 30px;
       
     }
+
+    .logoPic {
+        right: -10%;
+    }
    
 
   }
